hphp/test/slow/late-init/redeclare2.php.expectf
Fatal error: Property B::$x must not be <<__LateInit>> (as in class A) in %s/redeclare2.php on line 8
